unpackaged/objects/Ichiroheian__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>（自動車）契約店</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CarKeiyakuCountry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>代理店</fullName>
                </value>
                <value>
                    <fullName>ブローカー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Cd__c</fullName>
        <formula>KeiyakuCompanyName__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(契約会社)会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_WBEigyoTanto__c</fullName>
        <formula>KeiyakuCompanyName__r.EigyoTanto_TEXT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(契約会社)WB営業担当</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelDate__c</fullName>
        <label>（搭乗）保険解約日（24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>（搭乗）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarKeiyakuCountry__c</fullName>
        <label>（自動車）契約国</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarModel__c</fullName>
        <label>車型</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarNo__c</fullName>
        <label>車両番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarShozokuArea__c</fullName>
        <label>（自動車）所属地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_KeiyakuArea__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>安徽省</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>福建省</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>山東省</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ハイフォン</fullName>
                </value>
                <value>
                    <fullName>ダナン</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>ジョホールバル</fullName>
                </value>
                <value>
                    <fullName>ペナン</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>セブ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarTaikaiKubun__c</fullName>
        <formula>IF ( OR( 
AND(ISNULL(OI_InsuranceShuki__c)=False, OR(ISNULL( OI_InsuranceCancel__c ) = TRUE ,
OI_InsuranceCancel__c&gt; TODAY() )),
AND(ISNULL( VI_InsuranceShuki__c )=False, OR(ISNULL(  VI_InsuranceCancel__c  ) = TRUE ,
VI_InsuranceCancel__c &gt; TODAY() ))),
&quot;契約車&quot;, &quot;&quot;)</formula>
        <label>自動車退会区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeShiki__c</fullName>
        <label>（搭乗）異動始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CoveringInsuranceSeat__c</fullName>
        <label>付保座席数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailsNo__c</fullName>
        <label>（搭乗）明細番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>自動車保険関連</relationshipLabel>
        <relationshipName>R00N10000000ZtWYEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EngineNo__c</fullName>
        <label>エンジン番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>ShiyoCompanyName__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(使用会社)会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>（任意）保険料通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstEntryDate__c</fullName>
        <label>初登年月</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IchiroHeianNo__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>システム登録番号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ImportComm__c</fullName>
        <label>取込コメント</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InsurancePlan__c</fullName>
        <label>（搭乗）保険プラン</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WOCommodityName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
                <value>
                    <fullName>FD</fullName>
                </value>
                <value>
                    <fullName>ZD</fullName>
                </value>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>CD1</fullName>
                </value>
                <value>
                    <fullName>DD1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>AD2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceShiki__c</fullName>
        <label>（搭乗）初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceShuki__c</fullName>
        <label>（搭乗）現保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeijoMonthAnzen__c</fullName>
        <formula>IF (MONTH( InsuranceShuki__c ) = 12,1, MONTH( InsuranceShuki__c ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(安全)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeijoMonthCar__c</fullName>
        <formula>IF (  ISNULL(OI_InsuranceShuki__c) = FALSE ,   KeijoMonthOI__c  , IF (ISNULL(  VI_InsuranceShuki__c ) = FALSE,  KeijoMonthVI__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(自動車)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeijoMonthOI__c</fullName>
        <formula>IF (MONTH( OI_InsuranceShuki__c ) = 12, 1, MONTH( OI_InsuranceShuki__c ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(強制)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeijoMonthVI__c</fullName>
        <formula>IF (MONTH( VI_InsuranceShuki__c ) = 12, 1,MONTH( VI_InsuranceShuki__c ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(任意)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeiyakuArea__c</fullName>
        <label>（搭乗）契約地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KeiyakuCountry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>厦門</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>中山</fullName>
                </value>
                <value>
                    <fullName>珠海</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>華北</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>江蘇</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>旧（一路/安全）契約会社名称　2011/1/26　一路・安全・自動車の契約会社として使用する</description>
        <label>契約会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>自動車保険関連 (契約会社名称)</relationshipLabel>
        <relationshipName>R00N10000000HfleEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeiyakuCountry__c</fullName>
        <label>（搭乗）契約国</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WOAgency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeiyakuShubetsu__c</fullName>
        <label>（任意）契約種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>上海契約特別対応</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>会員</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MoushikomiDate__c</fullName>
        <label>（搭乗）申込日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NonMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非会員</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OI_CancelReason__c</fullName>
        <label>（強制）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_CommissionAmount__c</fullName>
        <formula>OI_InsuranceAmount__c  *  OI_CommissionRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（強制）手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_CommissionCurrency__c</fullName>
        <label>（強制）手数料通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_CommissionRate__c</fullName>
        <label>（強制）手数料率　％</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OI_CompanyName__c</fullName>
        <label>（強制）保険会社名</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>平安財産保険</fullName>
                </value>
                <value>
                    <fullName>太平洋財産保険</fullName>
                </value>
                <value>
                    <fullName>PICC</fullName>
                </value>
                <value>
                    <fullName>華泰財産保険会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上（中国）</fullName>
                </value>
                <value>
                    <fullName>天安（東京海上日動）</fullName>
                </value>
                <value>
                    <fullName>華泰財産保険（東京海上日動）</fullName>
                </value>
                <value>
                    <fullName>太平洋保険（三井住友海上）</fullName>
                </value>
                <value>
                    <fullName>富邦財険</fullName>
                </value>
                <value>
                    <fullName>日本財産保険（中国）</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（中国）</fullName>
                </value>
                <value>
                    <fullName>中華聨合財産</fullName>
                </value>
                <value>
                    <fullName>Bao Viet Tokio Marine</fullName>
                </value>
                <value>
                    <fullName>UIC</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine(Malaysia)</fullName>
                </value>
                <value>
                    <fullName>MALAYAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_CompensationContents__c</fullName>
        <label>（強制）補償内容</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OI_DeathAftereffects__c</fullName>
        <label>（強制）死亡後遺障害</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>110,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_InsuranceAmount__c</fullName>
        <label>（強制）保険料</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_InsuranceCancel__c</fullName>
        <label>（強制）保険解約日（24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_InsuranceShiki__c</fullName>
        <label>（強制）保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_InsuranceShuki__c</fullName>
        <label>（強制）保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_KeiyakuArea__c</fullName>
        <label>（自動車）契約地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>華北</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>江蘇</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_KeiyakuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>（自動車）契約会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>自動車保険関連 (契約会社名称)</relationshipLabel>
        <relationshipName>R00N10000000cuRIEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OI_KeiyakuStatus__c</fullName>
        <formula>if( and(isnull(OI_InsuranceCancel__c )=true,isnull( OI_InsuranceShuki__c )=false),&quot;契約中&quot;,
  if( and(isnull(OI_InsuranceCancel__c )=false,isnull( OI_InsuranceShuki__c )=false),&quot;退会&quot;,&quot;契約なし&quot;))</formula>
        <label>（強制）契約状態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_KinkyuTel__c</fullName>
        <label>（強制）緊急連絡電話番号</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>95511</fullName>
                </value>
                <value>
                    <fullName>95500</fullName>
                </value>
                <value>
                    <fullName>95518</fullName>
                </value>
                <value>
                    <fullName>4006095509</fullName>
                </value>
                <value>
                    <fullName>4008832836</fullName>
                </value>
                <value>
                    <fullName>4008817518</fullName>
                </value>
                <value>
                    <fullName>4009209551</fullName>
                </value>
                <value>
                    <fullName>4008858228</fullName>
                </value>
                <value>
                    <fullName>0915-341-499</fullName>
                </value>
                <value>
                    <fullName>1800-555-505</fullName>
                </value>
                <value>
                    <fullName>95585</fullName>
                </value>
                <value>
                    <fullName>026878525</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_MedicalCost__c</fullName>
        <label>（強制）医療費用</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_NonDeathAftereffects__c</fullName>
        <label>（強制）無責任死亡後遺障害</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>11,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_NonMedicalCost__c</fullName>
        <label>（強制）無責任医療費用</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_NonPropertyLoss__c</fullName>
        <label>（強制）無責任財産損失</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_PropertyLoss__c</fullName>
        <label>（強制）財産損失</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OI_ShokenNo__c</fullName>
        <label>（強制）証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_VI_EarlyInsuranceShuki__c</fullName>
        <formula>IF (  and(OI_KeiyakuStatus__c = &quot;契約中&quot;,VI_KeiyakuStatus__c = &quot;契約中&quot;),
  if( OI_InsuranceShuki__c  &lt;=  VI_InsuranceShuki__c ,OI_InsuranceShuki__c,VI_InsuranceShuki__c),

  if(and(OI_KeiyakuStatus__c = &quot;契約中&quot;,VI_KeiyakuStatus__c  &lt;&gt;  &quot;契約中&quot;),OI_InsuranceShuki__c,
  if(and(OI_KeiyakuStatus__c &lt;&gt; &quot;契約中&quot;,VI_KeiyakuStatus__c  =  &quot;契約中&quot;),VI_InsuranceShuki__c,null)))</formula>
        <label>強制任意満期（近い期日）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OwnerKubun__c</fullName>
        <label>所有区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>所有</fullName>
                </value>
                <value>
                    <fullName>租借</fullName>
                </value>
                <value>
                    <fullName>レンタル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passenger_Rental_Fee__c</fullName>
        <label>（搭乗）レンタカー費用</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PresentInsuranceShiki__c</fullName>
        <label>（搭乗）現保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <label>法定座席数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShiyoCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>実際に車を使用する会社を選択します。</inlineHelpText>
        <label>使用会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N10000000I8NVEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShokenNo__c</fullName>
        <label>（搭乗）証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShozokuArea__c</fullName>
        <label>（搭乗）所属地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KeiyakuArea__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ハイフォン</fullName>
                </value>
                <value>
                    <fullName>ダナン</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>セブ</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>ペナン</fullName>
                </value>
                <value>
                    <fullName>ジョホールバル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VI_CancelReason__c</fullName>
        <label>（任意）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VI_CommissionAmount__c</fullName>
        <formula>VI_InsuranceAmount__c  *  VI_CommissionRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（任意）手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_CommissionCurrency__c</fullName>
        <label>（任意）手数料通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VI_CommissionRate__c</fullName>
        <label>（任意）手数料率　％</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>